<resources>
    <string name="app_name">Latitude and Longitude</string>
    <string name="title_activity_splash">splash</string>
    <string name="ServiceError">Service unavailable</string>
    <string name="TwentyFourHour">24 Hour Clock-</string>
    <string name="TwelveHour">12 Hour Clock-</string>
    <string name="Today">Today</string>
    <string name="CurrentLocation">Current Location</string>
    <string name="LastLocation">Last Location</string>
    <string name="Altitude">Altitude</string>
    <string name="FetchingAltitude">Fetching Altitude</string>
    <string name="FetchingAccuracy">Fetching Accuracy</string>
    <string name="Speed">Speed</string>
    <string name="FetchingSpeed">Fetching Speed</string>
    <string name="Bearing">Bearing</string>
    <string name="Accuracy">Accuracy</string>
    <string name="FetchingBearingdegrees">Fetching Bearing degrees</string>
    <string name="Temperature">Temperature:</string>
    <string name="EnterPlace">Enter Place</string>
    <string name="EnterLongitude">Enter Longitude</string>
    <string name="EnterLatitude">Enter Latitude</string>
    <string name="View">View</string>
    <string name="AboutView">View your location on map service providers</string>
    <string name="Viewcoordinates">View coordinates</string>
    <string name="Viewco">View coordinates on map service providers</string>
    <string name="EnterCoordinates">Enter Coordinates</string>
    <string name="AboutCompass">Click here to launch a compass</string>
    <string name="Compass">Compass</string>
    <string name="WeatherView">View the weather in your location</string>
    <string name="Weather">Weather</string>
    <string name="AboutSearch">Search and view on map service providers</string>
    <string name="Search">Search</string>
    <string name="SearchPlace">Search a place</string>
    <string name="CurrentInfo">View current information</string>
    <string name="AboutCurrentLocation">Current Location</string>
    <string name="Logo">Logo</string>
    <string name="NoError">Test</string>
</resources>
