<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/maincollapse"
    tools:context="a1.latitudeandlongitude.Dashboard"
    android:background="#fcfcfc">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:id="@+id/appbar"
        android:background="@drawable/mapgoogle"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:id="@+id/collapse"
            android:layout_height="match_parent"
            app:title="Location Info"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#fcfcfc"
        android:gravity="center"
        android:id="@+id/ll">
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/CurrentLocationCard"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#fff"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:contentDescription="@string/AboutCurrentLocation"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/accuracybackround"
                        android:src="@drawable/locationimg"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/DimGray"
                        android:text="@string/AboutCurrentLocation"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/CurrentInfo"
                        android:padding="5dp"
                        android:textColor="@color/SlateGray"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/Searchplace"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#fff">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:contentDescription="@string/SearchPlace"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/altitudebackround"
                        android:src="@drawable/searchimg"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/DimGray"
                        android:layout_marginTop="10dp"
                        android:text="@string/SearchPlace"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/AboutSearch"
                        android:padding="5dp"
                        android:textColor="@color/SlateGray"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/viewweather"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#fff">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:contentDescription="@string/WeatherView"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/timedatebackround"
                        android:src="@drawable/weatherimg"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/DimGray"
                        android:layout_marginTop="10dp"
                        android:text="@string/Weather"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/WeatherView"
                        android:padding="5dp"
                        android:textColor="@color/SlateGray"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/compass"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#fff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/Compass"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/speedbackround"
                        android:padding="10dp"
                        android:src="@drawable/compassimg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/DimGray"
                        android:text="@string/Compass"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightgray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/AboutCompass"
                        android:textColor="@color/SlateGray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/entercoord"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#fff">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:contentDescription="@string/EnterCoordinates"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/lastlocationbackround"
                        android:src="@drawable/enterimg"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/DimGray"
                        android:layout_marginTop="10dp"
                        android:text="@string/EnterCoordinates"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Viewco"
                        android:padding="5dp"
                        android:textColor="@color/SlateGray"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/viewcoord"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#fff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/Viewcoordinates"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/bearingbackround"
                        android:padding="10dp"
                        android:src="@drawable/viewimg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/DimGray"
                        android:text="@string/Viewcoordinates"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightgray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/AboutView"
                        android:textColor="@color/SlateGray" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
